base resources content page working

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -19,6 +19,12 @@ section {
   position: relative;
   overflow: hidden;
 }
+/* content section */
+.sectionContainer {
+  max-width: 800px;
+  margin: auto;
+}
+
 /* Footer links */
 
 .footerLink {
